--- a/index.html
+++ b/index.html
@@ -200,32 +200,32 @@
       <a href="#faq" class="link-text hover:underline" x-text="t('nav.faq')"></a>
       <a href="#team" class="link-text hover:underline" x-text="t('nav.team')"></a>
     </nav>
-    <div class="flex items-center space-x-4">
-      <!-- Language Switcher -->
-      <div class="relative" x-data="{ open: false }">
-        <button @click="open = !open" class="flex items-center space-x-1 text-gray-600 dark:text-gray-300 focus:outline-none">
-          <iconify-icon icon="mdi:earth" class="text-xl"></iconify-icon>
-          <span x-text="languageNames[lang]"></span>
-          <iconify-icon icon="mdi:menu" class="text-sm" x-show="!open"></iconify-icon>
-          <iconify-icon icon="mdi:close" class="text-sm" x-show="open"></iconify-icon>
-        </button>
-        <div x-show="open" @click.away="open = false" class="absolute right-0 mt-2 w-32 bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded shadow-lg">
-          <template x-for="(name, code) in languageNames" :key="code">
-            <button @click="setLang(code); open = false" class="block w-full text-left px-3 py-2 hover:bg-gray-100 dark:hover:bg-gray-700" x-text="name"></button>
-          </template>
-        </div>
-      </div>
-      <!-- Theme Toggle -->
-      <button @click="toggleTheme()" class="focus:outline-none text-gray-600 dark:text-gray-300">
-        <iconify-icon icon="mdi:sun" class="text-2xl" x-show="!darkMode"></iconify-icon>
-        <iconify-icon icon="mdi:moon" class="text-2xl" x-show="darkMode"></iconify-icon>
-      </button>
-      <!-- Mobile Menu Button -->
-      <button @click="mobileMenu = !mobileMenu" class="md:hidden focus:outline-none text-gray-600 dark:text-gray-300">
-        <iconify-icon icon="mdi:menu" class="text-2xl" x-show="!mobileMenu"></iconify-icon>
-        <iconify-icon icon="mdi:close" class="text-2xl" x-show="mobileMenu"></iconify-icon>
-      </button>
+<div class="flex items-center space-x-4">
+  <!-- Language Switcher -->
+  <div class="relative" x-data="{ open: false }">
+    <button @click="open = !open" class="flex items-center space-x-1 text-gray-600 dark:text-gray-300 focus:outline-none">
+      <iconify-icon icon="mdi:earth" class="text-xl"></iconify-icon>
+      <span x-text="languageNames[lang]"></span>
+      <iconify-icon icon="mdi:menu" class="text-sm" x-show="!open"></iconify-icon>
+      <iconify-icon icon="mdi:close" class="text-sm" x-show="open"></iconify-icon>
+    </button>
+    <div x-show="open" @click.away="open = false" class="absolute right-0 mt-2 w-32 bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded shadow-lg z-50">
+      <template x-for="(name, code) in languageNames" :key="code">
+        <button @click="setLang(code); open = false" class="block w-full text-left px-3 py-2 hover:bg-gray-100 dark:hover:bg-gray-700" x-text="name"></button>
+      </template>
     </div>
+  </div>
+  <!-- Theme Toggle -->
+  <button @click="toggleTheme()" class="focus:outline-none text-gray-600 dark:text-gray-300">
+    <iconify-icon icon="mdi:sun" class="text-2xl" x-show="!darkMode"></iconify-icon>
+    <iconify-icon icon="mdi:moon" class="text-2xl" x-show="darkMode"></iconify-icon>
+  </button>
+  <!-- Mobile Menu Button -->
+  <button @click="mobileMenu = !mobileMenu" class="md:hidden focus:outline-none text-gray-600 dark:text-gray-300">
+    <iconify-icon icon="mdi:menu" class="text-2xl" x-show="!mobileMenu"></iconify-icon>
+    <iconify-icon icon="mdi:close" class="text-2xl" x-show="mobileMenu"></iconify-icon>
+  </button>
+</div>
   </header>
 
   <!-- Mobile Navigation -->
