--- a/index.html
+++ b/index.html
@@ -249,44 +249,44 @@
   <!-- Features Section -->
   <section id="features" class="py-12 md:py-20 bg-white dark:bg-gray-900 px-4 md:px-6">
     <h2 class="text-2xl md:text-4xl font-semibold text-center primary-text mb-8" x-text="t('nav.features')"></h2>
-    <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
-      <div class="p-4 bg-gray-100 dark:bg-gray-800 rounded-lg">
-        <iconify-icon icon="mdi:check" class="text-3xl text-green-500 mb-2"></iconify-icon>
-        <h3 class="font-medium mb-2">Omnichain Infrastructure</h3>
-        <p class="text-sm text-gray-600 dark:text-gray-300">Built on Orderly Network’s omnichain layer for unified liquidity across EVM chains and Solana.</p>
-      </div>
-      <div class="p-4 bg-gray-100 dark:bg-gray-800 rounded-lg">
-        <iconify-icon icon="mdi:check" class="text-3xl text-green-500 mb-2"></iconify-icon>
-        <h3 class="font-medium mb-2">Up to 50x Leverage</h3>
-        <p class="text-sm text-gray-600 dark:text-gray-300">Trade perpetual futures with high leverage while maintaining professional risk tools.</p>
-      </div>
-      <div class="p-4 bg-gray-100 dark:bg-gray-800 rounded-lg">
-        <iconify-icon icon="mdi:check" class="text-3xl text-green-500 mb-2"></iconify-icon>
-        <h3 class="font-medium mb-2">Advanced Order Types</h3>
-        <p class="text-sm text-gray-600 dark:text-gray-300">Limit, stop‑loss, take‑profit, conditional and trailing orders for sophisticated strategies.</p>
-      </div>
-      <div class="p-4 bg-gray-100 dark:bg-gray-800 rounded-lg">
-        <iconify-icon icon="mdi:check" class="text-3xl text-green-500 mb-2"></iconify-icon>
-        <h3 class="font-medium mb-2">Cross‑Margin Account</h3>
-        <p class="text-sm text-gray-600 dark:text-gray-300">Use your entire balance as collateral across all positions for capital efficiency.</p>
-      </div>
-      <div class="p-4 bg-gray-100 dark:bg-gray-800 rounded-lg">
-        <iconify-icon icon="mdi:check" class="text-3xl text-green-500 mb-2"></iconify-icon>
-        <h3 class="font-medium mb-2">Low Fees & Competitive Spreads</h3>
-        <p class="text-sm text-gray-600 dark:text-gray-300">Transparent maker/taker fees starting at 0.02% / 0.05%.</p>
-      </div>
-      <div class="p-4 bg-gray-100 dark:bg-gray-800 rounded-lg">
-        <iconify-icon icon="mdi:check" class="text-3xl text-green-500 mb-2"></iconify-icon>
-        <h3 class="font-medium mb-2">Real‑Time Market Data</h3>
-        <p class="text-sm text-gray-600 dark:text-gray-300">Live analytics and price feeds for informed trading decisions.</p>
-      </div>
-    </div>
+<div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
+  <div class="p-4 bg-gray-100 dark:bg-gray-800 rounded-lg">
+    <iconify-icon icon="mdi:rocket" class="text-2xl text-green-500 mb-2"></iconify-icon>
+    <h3 class="font-medium mb-2">Omnichain Infrastructure</h3>
+    <p class="text-sm text-gray-600 dark:text-gray-300">Built on Orderly Network’s omnichain layer for unified liquidity across EVM chains and Solana.</p>
+  </div>
+  <div class="p-4 bg-gray-100 dark:bg-gray-800 rounded-lg">
+    <iconify-icon icon="mdi:lightning-bolt" class="text-2xl text-green-500 mb-2"></iconify-icon>
+    <h3 class="font-medium mb-2">Up to 50x Leverage</h3>
+    <p class="text-sm text-gray-600 dark:text-gray-300">Trade perpetual futures with high leverage while maintaining professional risk tools.</p>
+  </div>
+  <div class="p-4 bg-gray-100 dark:bg-gray-800 rounded-lg">
+    <iconify-icon icon="mdi:shield" class="text-2xl text-green-500 mb-2"></iconify-icon>
+    <h3 class="font-medium mb-2">Advanced Order Types</h3>
+    <p class="text-sm text-gray-600 dark:text-gray-300">Limit, stop‑loss, take‑profit, conditional and trailing orders for sophisticated strategies.</p>
+  </div>
+  <div class="p-4 bg-gray-100 dark:bg-gray-800 rounded-lg">
+    <iconify-icon icon="mdi:star" class="text-2xl text-green-500 mb-2"></iconify-icon>
+    <h3 class="font-medium mb-2">Cross‑Margin Account</h3>
+    <p class="text-sm text-gray-600 dark:text-gray-300">Use your entire balance as collateral across all positions for capital efficiency.</p>
+  </div>
+  <div class="p-4 bg-gray-100 dark:bg-gray-800 rounded-lg">
+    <iconify-icon icon="mdi:arrow-right" class="text-2xl text-green-500 mb-2"></iconify-icon>
+    <h3 class="font-medium mb-2">Low Fees & Competitive Spreads</h3>
+    <p class="text-sm text-gray-600 dark:text-gray-300">Transparent maker/taker fees starting at 0.02% / 0.05%.</p>
+  </div>
+  <div class="p-4 bg-gray-100 dark:bg-gray-800 rounded-lg">
+    <iconify-icon icon="mdi:rocket" class="text-2xl text-green-500 mb-2"></iconify-icon>
+    <h3 class="font-medium mb-2">Real‑Time Market Data</h3>
+    <p class="text-sm text-gray-600 dark:text-gray-300">Live analytics and price feeds for informed trading decisions.</p>
+  </div>
+</div>
   </section>
 
   <!-- CTA Section (also appears in footer) -->
   <section class="py-12 md:py-20 bg-primary-bg text-white text-center">
     <h2 class="text-2xl md:text-4xl font-bold mb-4" x-text="t('cta.button')"></h2>
-    <a href="https://dex.orderly.network/test-dex-0787/" class="inline-block bg-white text-primary-bg font-medium rounded-md px-6 py-3 hover:bg-gray-200 transition-colors" x-text="t('cta.button')"></a>
+<a href="https://dex.orderly.network/test-dex-0787/" class="inline-block bg-blue-600 text-white font-medium rounded-md px-6 py-3 hover:bg-blue-700 transition-colors" x-text="t('cta.button')"></a>
   </section>
 
   <!-- About Section -->
